# Unanimous_path_finding

./: README.md
cloud_to_map/: 3drviz.rviz
cloud_to_map/map/: Coex.yaml  Gwanggaeto.yaml  Hyungnam11.yaml  Mirae03.yaml  Soongsil.yaml  floor4.yaml  hankyoungjik.yaml  miraef1.yaml  navvis.yaml
cloud_to_map/path/: path.txt  request.txt
cloud_to_map/src/cloud_to_map/: CMakeLists.txt
cloud_to_map/src/cloud_to_map/launch/: path.launch
cloud_to_map/src/cloud_to_map/src/: cloud_to_map_node.cpp  get_min_xy.cpp  path_to_pointcloud.cpp  publish_start_goal.cpp
humanoid_navigation/: README.md
humanoid_navigation/footstep_planner/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_navigation/footstep_planner/config/: footsteps_asimo.yaml
humanoid_navigation/footstep_planner/include/footstep_planner/: FootstepPlanner.h  FootstepPlannerNode.h
humanoid_navigation/footstep_planner/launch/: footstep_planner.launch  footstep_planner_complete.launch  my_map.launch
humanoid_navigation/footstep_planner/src/: FootstepPlanner.cpp
humanoid_navigation/gridmap_2d/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_navigation/humanoid_localization/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_navigation/humanoid_localization/include/humanoid_localization/: EndpointModel.h  MotionModel.h  ObservationModel.h  RaycastingModel.h  humanoid_localization_defs.h
humanoid_navigation/humanoid_localization/src/: MapModel.cpp  RaycastingModel.cpp
humanoid_navigation/humanoid_navigation/: CHANGELOG.rst  package.xml
humanoid_navigation/humanoid_planner_2d/: CHANGELOG.rst  CMakeLists.txt  package.xml
my_tf_pkg/: CMakeLists.txt  package.xml
navigation/costmap_2d/launch/: example.launch  example_params.yaml
navigation/costmap_2d/plugins/: static_layer.cpp
navigation/costmap_2d/src/: costmap_2d_node.cpp  costmap_2d_ros.cpp
navigation/global_planner/launch/: planner.launch
navigation/map_server/: CMakeLists.txt
navigation/map_server/launch/: my.launch  planner.launch
navigation/map_server/src/: main.cpp
pcl_ros/: CMakeLists.txt
pcl_ros/tools/: pcd_to_pointcloudcopy.cpp
